# plotly_toolbox

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: IMPROVEMENT_PLAN.md  SPEC-dashboard.md
examples/: README.md  gallery.py
src/plotly_toolbox/: __init__.py  core.py  palettes.py
src/plotly_toolbox/domain/: __init__.py  pie.py
src/plotly_toolbox/xy/: __init__.py  area.py  bars.py  distribution.py  heatmap.py  histogram.py  line.py  scatter.py
tests/: conftest.py  test_charts.py  test_core.py  test_examples.py  test_phase3.py  test_pipeline.py
