[project]
name = "plotly-toolbox"
version = "0.1.0"
description = ""
authors = [
    {name = "Edward",email = "edward_tl@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "plotly (>=6.3.1,<7.0.0)"
]

[tool.poetry]
packages = [{include = "plotly_toolbox", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
